--- a/config-files/subscription-observability-operator.yaml
+++ b/config-files/subscription-observability-operator.yaml
@@ -1,15 +1,13 @@
----
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  labels:
-    operators.coreos.com/observability-operator.openshift-operators: ""
-  name: observability-operator
-  namespace: openshift-operators
+  name: cluster-observability-operator
+  namespace: openshift-cluster-observability-operator
 spec:
-  channel: development
+  channel: stable
   installPlanApproval: Automatic
-  name: observability-operator
-  source: observability-operator
+  name: cluster-observability-operator
+  source: redhat-operators
   sourceNamespace: openshift-marketplace
+  startingCSV: cluster-observability-operator.v1.3.0
 
