--- a/monitoring-setup/cluster-observability-operator/scrape-config.yaml
+++ b/monitoring-setup/cluster-observability-operator/scrape-config.yaml
@@ -10,7 +10,7 @@ spec:
   scheme: HTTPS
   staticConfigs:
     - targets:
-        - "central.tssc-acs.svc.cluster.local:443"
+        - "central.tssc-acs.svc.cluster:443"
   tlsConfig:
     ca:
       secret:
