--- a/monitoring-setup/prometheus-operator/additional-scrape-config.yaml
+++ b/monitoring-setup/prometheus-operator/additional-scrape-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: rhacs-prometheus-additional-scrape-configs
+  name: rhacs-prometheus-stack-prometheus-additional-scrape-configs
   namespace: tssc-acs
 stringData:
   prometheus-additional.yaml: |
@@ -12,4 +12,4 @@ stringData:
       tls_config:
         insecure_skip_verify: true
       static_configs:
-      - targets: ['central.tssc-acs.svc.cluster.local:443']
+      - targets: ['central.tssc-acs.svc:443']
