--- a/monitoring-setup/cluster-observability-operator/monitoring-stack.yaml
+++ b/monitoring-setup/cluster-observability-operator/monitoring-stack.yaml
@@ -1,8 +1,8 @@
 apiVersion: monitoring.rhobs/v1alpha1
 kind: MonitoringStack
 metadata:
-  name: rhacs-monitoring-stack
-  namespace: tssc-acs
+  name: sample-stackrox-monitoring-stack
+  namespace: rhacs-operator
   finalizers:
     - monitoring.observability.openshift.io/finalizer
   labels:
