--- a/monitoring-setup/perses/datasource.yaml
+++ b/monitoring-setup/perses/datasource.yaml
@@ -1,8 +1,8 @@
 apiVersion: perses.dev/v1alpha1
 kind: PersesDatasource
 metadata:
-  name: rhacs-datasource
-  namespace: tssc-acs
+  name: sample-rhacs-operator-datasource
+  namespace: rhacs-operator
 spec:
   client:
     tls:
@@ -20,4 +20,4 @@ spec:
         proxy:
           kind: HTTPProxy
           spec:
-            url: 'http://prometheus-operated.tssc-acs.svc.cluster.local:9090'
+            url: 'http://prometheus-operated.rhacs-operator.svc.cluster.local:9090'
