--- a/monitoring-setup/prometheus-operator/additional-scrape-config.yaml
+++ b/monitoring-setup/prometheus-operator/additional-scrape-config.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: rhacs-prometheus-additional-scrape-configs
-  namespace: tssc-acs
+  name: sample-rhacs-operator-prometheus-additional-scrape-configs
+  namespace: rhacs-operator
 stringData:
   prometheus-additional.yaml: |
-    - job_name: 'rhacs-metrics'
+    - job_name: 'sample-rhacs-operator-metrics'
       scheme: https
       metrics_path: /metrics
       bearer_token_file: /var/run/secrets/tokens/token
       tls_config:
         insecure_skip_verify: true
       static_configs:
-      - targets: ['central.tssc-acs.svc.cluster.local:443']
+      - targets: ['central.rhacs-operator.svc.cluster.local:443']
