--- a/monitoring-setup/prometheus-operator/prometheus-rule.yaml
+++ b/monitoring-setup/prometheus-operator/prometheus-rule.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.rhobs/v1
 kind: PrometheusRule
 metadata:
   name: rhacs-health-alerts
-  namespace: tssc-acs
+  namespace: rhacs-operator
   labels:
     app: central
 spec:
